--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,13 @@
 name: 3dcnn
 channels:
+  - conda-forge
+  - nvidia
   - pytorch
   - defaults
 dependencies:
-  - python
+  - python::pytorch
   - pytorch
+  - nvidia::cudatoolkit=11.1
   - numpy
   - pandas
   - scikit-learn
