--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,12 @@
 name: 3dcnn
 channels:
-  - conda-forge
-  - nvidia
   - pytorch
+  - nvidia
   - defaults
 dependencies:
   - python
-  - pytorch::pytorch
-  - nvidia::cudatoolkit
+  - pytorch
+  - pytorch-cuda=11.8
   - numpy
   - pandas
   - scikit-learn
