--- a/Savio_config.json
+++ b/Savio_config.json
@@ -2,5 +2,6 @@
 	"data_path": "/global/scratch/users/ethantqiu",
 	"train_parts": "data/50000.json",
 	"val_parts": "data/benchmark.json",
-	"resolution": 256
+	"resolution": 256,
+	"wandb_path": "/global/scratch/users/changli824/wandb"
 }
