--- a/Savio_config.json
+++ b/Savio_config.json
@@ -3,5 +3,6 @@
 	"train_parts": "data/200000.json",
 	"val_parts": "data/benchmark.json",
 	"resolution": 64,
-	"wandb_path": "/global/scratch/users/changli824"
+	"wandb_path": "/global/scratch/users/changli824",
+	"baseline": 0
 }
